@@ -110,6 +110,8 @@ int     PG_SETTING_DISCOVERY(AGENT_REQUEST *request, AGENT_RESULT *result);
 int     PG_QUERY(AGENT_REQUEST *request, AGENT_RESULT *result);
 
 int     PG_BACKENDS_COUNT(AGENT_REQUEST *request, AGENT_RESULT *result);
+int     PG_BACKENDS_FREE(AGENT_REQUEST *request, AGENT_RESULT *result);
+int     PG_BACKENDS_RATIO(AGENT_REQUEST *request, AGENT_RESULT *result);
 int     PG_QUERIES_LONGEST(AGENT_REQUEST *request, AGENT_RESULT *result);
 
 int     PG_STAT_BGWRITER(AGENT_REQUEST *request, AGENT_RESULT *result);
